Fixed minor button css alignment

--- a/Frontend/src/Components/styles/login.css
+++ b/Frontend/src/Components/styles/login.css
@@ -32,6 +32,7 @@
     cursor: pointer;
     transition: all 0.3s;
     transform: scale(1.2);
+    margin-top: 25rem;
 }
 #LinkSign:hover{
     color: black;
